grammar.js
    preproc_directive: ($, original) => choice(
      // #pragma 専用のルール
      seq(
        '#',
        // 'pragma' という文字列を 'identifier' として扱う
        alias($._pragma_directive_identifier, $.identifier),
        // 新しく作る '_pragma_argument' トークンを 'preproc_arg' としてエイリアスする
        optional(alias($._pragma_argument, $.preproc_arg)),
        '\n'
      ),
      // #pragma 以外のディレクティブは、オリジナルのC文法に任せる
      original 
    ),
    _pragma_directive_identifier: _ => 'pragma',


    enumerator: ($, original) => seq(
      original,
      optional($.umeta_macro)
    ),


    type_qualifier: (_, original) => choice(
      original,
      'mutable',
      'constinit',
      'consteval',
    ),

    _class_declaration: $ => seq(
      repeat(choice($.attribute_specifier, $.alignas_qualifier)),
      optional($.ms_declspec_modifier),
      repeat($.attribute_declaration),
      $._class_declaration_item,
    ),
    class_specifier: $ => seq(
      'class',
      $._class_declaration,
    ),

    _class_name: $ => prec.right(choice(
      $._type_identifier,
      $.template_type,
      $.splice_type_specifier,
      alias($.qualified_type_identifier, $.qualified_identifier),
    )),

    function_definition: ($, original) => ({
      ...original,
      members: original.members.map(
        (e) => e.name !== 'body' ?
          e :
          field('body', choice(e.content, $.try_statement))),
    }),

    declaration: $ => seq(
      // ▼▼▼ 追加: DEPRECATEDマクロを許可 ▼▼▼
      optional($.unreal_deprecated_macro),
      // ▲▲▲ 追加完了 ▲▲▲
      $._declaration_specifiers,
      commaSep1(field('declarator', choice(
        seq(
          // C uses _declaration_declarator here for some nice macro parsing in function declarators,
          // but this causes a world of pain for C++ so we'll just stick to the normal _declarator here.
          optional($.ms_call_modifier),
          $._declarator,
          optional($.gnu_asm_expression),
        ),
        $.init_declarator,
      ))),
      ';',
    ),

    base_class_clause: $ => seq(
      ':',
      commaSep1(seq(
        repeat($.attribute_declaration),
        optional(choice(
          $.access_specifier,
          seq($.access_specifier, optional('virtual')),
          seq('virtual', optional($.access_specifier)),
        )),
        $._class_name,
        optional('...'),
      )),
    ),

    _enum_base_clause: $ => prec.left(seq(
      ':',
      field('base', choice(
        alias($.qualified_type_identifier, $.qualified_identifier),
        $._type_identifier,
        $.primitive_type,
        $.sized_type_specifier,
      )),
    )),

    // The `auto` storage class is removed in C++0x in order to allow for the `auto` type.
    storage_class_specifier: ($, original) => choice(
      ...original.members.filter((member) => member.value !== 'auto'),
      'thread_local',
      //unreal
      $.unreal_api_specifier, // <-- これを追加
      $.unreal_force_inline, // <<< これを追加
      //unreal
    ),

    parameter_list: $ => seq(
      '(',
      commaSep(choice(
        $.parameter_declaration,
        $.explicit_object_parameter_declaration,
        $.optional_parameter_declaration,
        $.variadic_parameter_declaration,
        '...',
      )),
      ')',
    ),

    optional_parameter_declaration: $ => seq(
      $._declaration_specifiers,
      field('declarator', optional(choice($._declarator, $.abstract_reference_declarator))),
      '=',
      field('default_value', $.expression),
    ),

    compound_statement: (_, original) => prec(-1, original),

    field_declaration: $ => prec(10, seq(
      //unreal
      optional($.unreal_deprecated_macro),
      
      // ▼▼▼ 修正: ここから $.ufunction_macro を削除 (UPROPERTY専用にする) ▼▼▼
      optional($.uproperty_macro),
      // ▲▲▲ 修正完了 ▲▲▲

      //unreal
      $._declaration_specifiers,
      commaSep(seq(
        field('declarator', $._field_declarator),
        optional(choice(
          $.bitfield_clause,
          field('default_value', $.initializer_list),
          seq('=', field('default_value', choice($.expression, $.initializer_list))),
        )),
      )),
      optional($.attribute_specifier),
      ';'
    )),
    // ---------------------------------------------------------
    // 3. 新規追加: UFUNCTION 専用の宣言ルール (プロトタイプ)
    // ---------------------------------------------------------
    unreal_function_declaration: $ => seq(
      optional($.unreal_deprecated_macro),
      $.ufunction_macro,
      $._declaration_specifiers,
      field('declarator', $._field_declarator),
      optional($.attribute_specifier),
      optional(choice(
         $.default_method_clause,
         $.delete_method_clause,
         $.pure_virtual_clause
      )),
      ';'
    ),
    access_specifier: _ => choice(
      'public',
      'private',
      'protected',
    ),

    _declarator: ($, original) => choice(
      original,
      $.reference_declarator,
      $.qualified_identifier,
      $.template_function,
      $.operator_name,
      $.destructor_name,
      $.structured_binding_declarator,
    ),

    _field_declarator: ($, original) => choice(
      original,
      alias($.reference_field_declarator, $.reference_declarator),
      $.template_method,
      $.operator_name,
    ),

    reference_declarator: $ => prec.dynamic(1, prec.right(seq(choice('&', '&&'), $._declarator))),
    _function_declarator_seq: $ => seq(
      field('parameters', $.parameter_list),
      optional($._function_attributes_start),
      optional($.ref_qualifier),
      optional($._function_exception_specification),
      optional($._function_attributes_end),
      optional($.trailing_return_type),
      optional($._function_postfix),
    ),

    function_declarator: $ => prec.dynamic(1, seq(
      field('declarator', $._declarator),
      $._function_declarator_seq,
    )),

    return_statement: ($, original) => seq(
      choice(
        original,
        seq('return', $.initializer_list, ';'),
      ),
    ),

    call_expression: ($, original) => prec.dynamic(1, choice(original, seq(
      field('function', choice($.primitive_type, seq(
        optional('typename'),
        $.splice_type_specifier,
      ))),
      field('arguments', $.argument_list),
    ))),

    binary_expression: ($, original) => {
      const table = [
        ['<=>', PREC.THREE_WAY],
        ['or', PREC.LOGICAL_OR],
        ['and', PREC.LOGICAL_AND],
        ['bitor', PREC.INCLUSIVE_OR],
        ['xor', PREC.EXCLUSIVE_OR],
        ['bitand', PREC.BITWISE_AND],
        ['not_eq', PREC.EQUAL],
      ];

      return choice(
        original,
        ...table.map(([operator, precedence]) => {
          return prec.left(precedence, seq(
            field('left', $.expression),
            // @ts-ignore
            field('operator', operator),
            field('right', $.expression),
          ));
        }));
    },

    // The compound_statement is added to parse macros taking statements as arguments, e.g. MYFORLOOP(1, 10, i, { foo(i); bar(i); })
    argument_list: $ => seq(
      '(',
      commaSep(choice($.expression, $.initializer_list, $.compound_statement)),
      ')',
    ),

    destructor_name: $ => prec(1, seq('~', $.identifier)),

    _scope_resolution: $ => prec(1, seq(
      field('scope', optional(choice(
        $._namespace_identifier,
        $.template_type,
        $.decltype,
        $.splice_expression,
        $.splice_type_specifier,
        alias($.dependent_type_identifier, $.dependent_name),
      ))),
      '::',
    )),

    qualified_identifier: $ => seq(
      $._scope_resolution,
      field('name', choice(
        alias($.dependent_identifier, $.dependent_name),
        $.qualified_identifier,
        $.template_function,
        prec.dynamic(1, seq(optional('template'), $.identifier)),
        $.operator_name,
        $.destructor_name,
        $.pointer_type_declarator,
      )),
    ),

    _assignment_left_expression: ($, original) => choice(
      original,
      $.qualified_identifier,
      $.user_defined_literal,
    ),

    assignment_expression: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left', $._assignment_left_expression),
      field('operator', choice(...ASSIGNMENT_OPERATORS)),
      field('right', choice($.expression, $.initializer_list)),
    )),

    _assignment_expression_lhs: $ => seq(
      field('left', $.expression),
      field('operator', choice(...ASSIGNMENT_OPERATORS)),
      field('right', choice($.expression, $.initializer_list)),
    ),

    // This prevents an ambiguity between fold expressions
    // and assignment expressions within parentheses.
    parenthesized_expression: ($, original) => choice(
      original,
      seq('(', alias($._assignment_expression_lhs, $.assignment_expression), ')'),
    ),

    number_literal: $ => {
      const sign = /[-\+]/;
      const separator = '\'';
      const binary = /[01]/;
      const binaryDigits = seq(repeat1(binary), repeat(seq(separator, repeat1(binary))));
      const decimal = /[0-9]/;
      const firstDecimal = /[1-9]/;
      const intDecimalDigits = seq(firstDecimal, repeat(decimal), repeat(seq(separator, repeat1(decimal))));
      const floatDecimalDigits = seq(repeat1(decimal), repeat(seq(separator, repeat1(decimal))));
      const hex = /[0-9a-fA-F]/;
      const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))));
      const octal = /[0-7]/;
      const octalDigits = seq('0', repeat(octal), repeat(seq(separator, repeat1(octal))));
      const hexExponent = seq(/[pP]/, optional(sign), floatDecimalDigits);
      const decimalExponent = seq(/[eE]/, optional(sign), floatDecimalDigits);
      const intSuffix = /(ll|LL)[uU]?|[uU](ll|LL)?|[uU][lL]?|[uU][zZ]?|[lL][uU]?|[zZ][uU]?/;
      const floatSuffix = /([fF](16|32|64|128)?)|[lL]|(bf16|BF16)/;

      return token(seq(
        optional(sign),
        choice(
          seq(
            choice(
              seq(choice('0b', '0B'), binaryDigits),
              intDecimalDigits,
              seq(choice('0x', '0X'), hexDigits),
              octalDigits,
            ),
            optional(intSuffix),
          ),
          seq(
            choice(
              seq(floatDecimalDigits, decimalExponent),
              seq(floatDecimalDigits, '.', optional(floatDecimalDigits), optional(decimalExponent)),
              seq('.', floatDecimalDigits, optional(decimalExponent)),
              seq(
                choice('0x', '0X'),
                choice(
                  hexDigits,
                  seq(hexDigits, '.', optional(hexDigits)),
                  seq('.', hexDigits)),
                hexExponent,
              ),
            ),
            optional(floatSuffix),
          ),
        ),
      ));
    },

    unreal_pragma_macro: $ => token(prec(1, /PRAGMA_[A-Z0-9_]+/)),
    // ▲▲▲ 追加完了 ▲▲▲
    
    // --- START: UNREAL ENGINE RULES ---
    unreal_specifier_keyword: $ => choice(
     // UCLASS / USTRUCT / UENUM でよく使われるキーワード
      'Blueprintable',
      'BlueprintType',
      'Abstract',
      'abstract',
      'MinimalAPI',
      'Deprecated',

      // UPROPERTY
      'EditAnywhere',
      'EditDefaultsOnly',
      'EditInstanceOnly',
      'VisibleAnywhere',
      'VisibleDefaultsOnly',
      'VisibleInstanceOnly',
      'BlueprintReadOnly',
      'BlueprintReadWrite',
      'Config',
      'GlobalConfig',
      'Transient',
      'Replicated',
      'ReplicatedUsing',
      'SaveGame',

      // UFUNCTION 
      'BlueprintCallable',
      'BlueprintPure',
      'BlueprintImplementableEvent',
      'BlueprintNativeEvent',
      'Exec',
      'Server',
      'Client',
      'NetMulticast',
      'Reliable',
      'Unreliable',
      'WithValidation',

      //
      'Category',
      'meta',
      'DisplayName',
      'ToolTip'
    ),

    unreal_specifier: $ => choice(
      // key = value パターンを最優先
      prec(20, seq(
        field('key', choice($.unreal_specifier_keyword, $.identifier)),
        '=',
        field('value', $.unreal_specifier_content)
      )),
      // 単独の要素、あるいは複雑な式
      $.unreal_specifier_content
    ),

    _unreal_macro_arguments: $ => $.unreal_argument_list,

    unreal_api_specifier: $ => token(prec(1, /[A-Z0-9_]+_API/)),

    uclass_macro: $ => seq('UCLASS', $.unreal_argument_list),
    ustruct_macro: $ => seq('USTRUCT', $.unreal_argument_list),
    uenum_macro: $ => seq('UENUM', $.unreal_argument_list),

    umeta_macro: $ => seq('UMETA', $.unreal_argument_list),

    primitive_type: (_, original) => choice(
      original,
      'int8', 'uint8', 'int16', 'uint16', 'int32', 'uint32', 'int64', 'uint64', 'FString', 'FName', 'FText'
    ),

    unreal_body_macro: $ => seq(
      choice('GENERATED_BODY', 'GENERATED_UCLASS_BODY', 'GENERATED_USTRUCT_BODY'),
      '(', ')'
    ),

    unreal_declare_class_macro: $ => seq(
      'DECLARE_CLASS',
      $.unreal_argument_list
    ),
    unreal_define_default_object_initializer_macro: $ => seq(
      'DEFINE_DEFAULT_OBJECT_INITIALIZER_CONSTRUCTOR_CALL',
      $.unreal_argument_list
    ),
    uproperty_macro: $ => seq('UPROPERTY', $.unreal_argument_list),
    ufunction_macro: $ => seq('UFUNCTION', $.unreal_argument_list),

    // Standalone rules for Unreal class/struct definitions with high precedence
    unreal_class_declaration: $ => prec(100, seq(
      $.uclass_macro,
      repeat($.comment),
      'class',
      optional($.unreal_api_specifier),
      field('name', $._class_name),
      optional($.base_class_clause),
      field('body', $.field_declaration_list),
      optional(';'),
    )),

    unreal_struct_declaration: $ => prec(100, seq(
      $.ustruct_macro,
      repeat($.comment),
      'struct',
      optional($.unreal_api_specifier),
      field('name', $._class_name),
      optional($.base_class_clause),
      field('body', $.field_declaration_list),
      optional(';'),
    )),

    unreal_enum_declaration: $ => prec(100, seq(
      $.uenum_macro,
      repeat($.comment),
      'enum',
      optional(choice('class', 'struct')),
      field('name', $._class_name),
      optional($._enum_base_clause),
      field('body', $.enumerator_list),
      optional(';')
    )),

    unreal_deprecated_macro: $ => prec(100, seq(
        choice('UE_DEPRECATED', 'UE_DEPRECATED_FORGAME'),
        $._unreal_macro_arguments
    )),

    // DECLARE_FUNCTION(...); ENUM_CLASS_FLAGS(...); などをキャッチ

    // 専用の緩い引数リスト定義
    unreal_specifier_list: $ => commaSep1($.unreal_specifier),

    // --- Unreal Delegate & Declaration Macros ---
    unreal_force_inline: $ => token(prec(1, /FORCEINLINE(_[A-Z0-9_]+)?/)),
    // --- END: UNREAL ENGINE RULES ---

    //
    _pragma_argument: _ => token.immediate(prec(-1, /.*/)),
  },
});

/**
 * Creates a rule to optionally match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
