test/corpus/unreal.txt
===
UCLASS Test
===

UCLASS(MinimalAPI, Blueprintable)
class AMyActor : public AActor
{
	GENERATED_BODY()
};

---
(translation_unit
  (unreal_class_declaration
    (uclass_macro
      specifiers: (unreal_specifier_list
        (unreal_specifier (unreal_specifier_keyword))
        (unreal_specifier (unreal_specifier_keyword))))
    name: (type_identifier)
    (base_class_clause
      (access_specifier)
      (type_identifier))
    body: (field_declaration_list
      (unreal_body_macro))))

===
UCLASS with API Specifier Test
===

UCLASS()
class MYPROJECT_API AMyActor : public AActor
{
	GENERATED_BODY()
};
---
(translation_unit
  (unreal_class_declaration
    (uclass_macro)
    (unreal_api_specifier)
    name: (type_identifier)
    (base_class_clause
      (access_specifier)
      (type_identifier))
    body: (field_declaration_list
      (unreal_body_macro))))

===
UENUM Test
===

UENUM(BlueprintType)
enum class EMyEnum : uint8_t
{
	EME_Val1,
	EME_Val2
};
---
(translation_unit
  (unreal_enum_declaration
    (uenum_macro
      specifiers: (unreal_specifier_list
        (unreal_specifier (unreal_specifier_keyword))))
    name: (type_identifier)
    base: (primitive_type)
    body: (enumerator_list
      (enumerator
        name: (identifier))
      (enumerator
        name: (identifier)))))

===
UPROPERTY and UFUNCTION Test
===

UCLASS()
class AMyNewActor : public AActor
{
	GENERATED_BODY()

public:
	UPROPERTY(EditAnywhere, BlueprintReadWrite, Category = "Stats")
	int32 Health;
UFUNCTION(BlueprintCallable, Category = "MyCategory")
	void MyFunction();

protected:
    UFUNCTION(Server, Reliable)
    void Server_Execute()
    {
        // Do something
    }
};
---
(translation_unit
  (unreal_class_declaration
    (uclass_macro)
    name: (type_identifier)
    (base_class_clause
      (access_specifier)
      (type_identifier))
    body: (field_declaration_list
      (unreal_body_macro)
      (access_specifier)
      (field_declaration
        (uproperty_macro
          specifiers: (unreal_specifier_list
            (unreal_specifier (unreal_specifier_keyword))
            (unreal_specifier (unreal_specifier_keyword))
     
       (unreal_specifier
              key: (unreal_specifier_keyword)
                  value: (string_literal
                    (string_content)))))
            type: (type_identifier)
        declarator: (field_identifier))
    (unreal_function_declaration
        (ufunction_macro
   
       specifiers: (unreal_specifier_list
            (unreal_specifier (unreal_specifier_keyword))
            (unreal_specifier
              key: (unreal_specifier_keyword)
              value: (string_literal
                  (string_content)))))
            type: (primitive_type)
      
      declarator: (function_declarator
          declarator: (field_identifier)
          parameters: (parameter_list)))
      (access_specifier)
      (function_definition
        (ufunction_macro
          specifiers: (unreal_specifier_list
            (unreal_specifier (unreal_specifier_keyword))
            (unreal_specifier (unreal_specifier_keyword))))
        type: (primitive_type)
     
   declarator: (function_declarator
          declarator: (field_identifier)
          parameters: (parameter_list))
        body: (compound_statement
          (comment))))))

===
USTRUCT Test
===

USTRUCT(Blueprintable)
struct FSplineNodeData
{
    GENERATED_BODY()
public:
    UPROPERTY(EditAnywhere, BlueprintReadWrite)
    FTransform Transform = FTransform::Identity;
UPROPERTY(EditAnywhere, BlueprintReadWrite)
    float test = 0.0f;
};
---
(translation_unit
  (unreal_struct_declaration
    (ustruct_macro
      specifiers: (unreal_specifier_list
        (unreal_specifier (unreal_specifier_keyword))))
    name: (type_identifier)
    body: (field_declaration_list
      (unreal_body_macro)
      (access_specifier)
      (field_declaration
        (uproperty_macro
          specifiers: (unreal_specifier_list
            (unreal_specifier (unreal_specifier_keyword))
            (unreal_specifier (unreal_specifier_keyword))))
     
   type: (type_identifier)
        declarator: (field_identifier)
        default_value: (qualified_identifier
          scope: (namespace_identifier)
          name: (identifier)))
      (field_declaration
        (uproperty_macro
          specifiers: (unreal_specifier_list
            (unreal_specifier (unreal_specifier_keyword))
            (unreal_specifier (unreal_specifier_keyword))))
     
   type: (primitive_type)
        declarator: (field_identifier)
        default_value: (number_literal)))))
    

===
UObject Class Definition Test
===

class UObject : public UObjectBaseUtility
{
	// Declarations
	DECLARE_CLASS(UObject,UObject,CLASS_Abstract|CLASS_Intrinsic|CLASS_MatchedSerializers,CASTCLASS_None,TEXT("/Script/CoreUObject"),COREUOBJECT_API)
	DEFINE_DEFAULT_OBJECT_INITIALIZER_CONSTRUCTOR_CALL(UObject)
	typedef UObject WithinClass;
/** Default constructor */
	COREUOBJECT_API UObject();

	/** Constructor that takes an ObjectInitializer. */
	COREUOBJECT_API UObject(const FObjectInitializer& ObjectInitializer);
/** Utility function for templates below */
	COREUOBJECT_API UObject* CreateDefaultSubobject(FName SubobjectFName, UClass* ReturnType, UClass* ClassToCreateByDefault, bool bIsRequired, bool bIsTransient);
};
---

(translation_unit
  (class_specifier
    name: (type_identifier)
    (base_class_clause
      (access_specifier)
      (type_identifier))
    body: (field_declaration_list
      (comment)
      (unreal_declare_class_macro
        (identifier)
        (identifier)
        (binary_expression
          left: (binary_expression
            left: (identifier)
            
right: (identifier))
          right: (identifier))
        (identifier)
        (call_expression
          function: (identifier)
          arguments: (argument_list
            (string_literal
              (string_content))))
        (unreal_api_specifier))
      (unreal_define_default_object_initializer_macro
        (identifier))
  
    (type_definition
        type: (type_identifier)
        declarator: (type_identifier))
      (comment)
      (declaration
        (unreal_api_specifier)
        declarator: (function_declarator
          declarator: (identifier)
          parameters: (parameter_list)))
      (comment)
      (declaration
     
   (unreal_api_specifier)
        declarator: (function_declarator
          declarator: (identifier)
          parameters: (parameter_list
            (parameter_declaration
              (type_qualifier)
              type: (type_identifier)
              declarator: 
(reference_declarator
                (identifier))))))
      (comment)
      (field_declaration
        (storage_class_specifier
          (unreal_api_specifier))
        type: (type_identifier)
        declarator: (pointer_declarator
            declarator: (function_declarator
            declarator: (field_identifier)
          
  parameters: (parameter_list
              (parameter_declaration
                type: (type_identifier)
                declarator: (identifier))
              (parameter_declaration
                type: (type_identifier)
                declarator: (pointer_declarator
 
                 declarator: (identifier)))
              (parameter_declaration
                type: (type_identifier)
                declarator: (pointer_declarator
                  declarator: (identifier)))
              (parameter_declaration
 
               type: (primitive_type)
                declarator: (identifier))
              (parameter_declaration
                type: (primitive_type)
               declarator: (identifier)))))))))


===
Unreal Declaration Macros Test
===

DECLARE_LOG_CATEGORY_EXTERN(LogObj, Log, All);
ENUM_CLASS_FLAGS(EEditChangePropagationFlags);

class MyTestClass
{
	DECLARE_FUNCTION(execUndefined);
};

---

(translation_unit
  (unreal_declaration_macro
    name: (identifier)
    arguments: (argument_list
      (identifier)
      (identifier)
      (identifier)))
  (unreal_declaration_macro
    name: (identifier)
    arguments: (argument_list
      (identifier)))
  (class_specifier
    name: (type_identifier)
    body: (field_declaration_list
      (unreal_declaration_macro
        name: (identifier)
        arguments: (argument_list
        (identifier))))))


===
FORCEINLINE Macro Test
===

FORCEINLINE bool 
IsValid(const UObject *Test)
{
	return Test && FInternalUObjectBaseUtilityIsValidFlagsChecker::CheckObjectValidBasedOnItsFlags(Test);
}

---

(translation_unit
  (function_definition
    (storage_class_specifier
        (unreal_force_inline))
    type: (primitive_type)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list
        (parameter_declaration
          (type_qualifier)
           type: (type_identifier)
          declarator: (pointer_declarator
            declarator: (identifier)))))
    body: (compound_statement
    
  (return_statement
        (binary_expression
          left: (identifier)
          right: (call_expression
            function: (qualified_identifier
              scope: (namespace_identifier)
              name: (identifier))
            arguments: (argument_list
            
  (identifier))))))))


===
FORCEINLINE Member Function Test
===

class MyClass
{
	FORCEINLINE bool Modify(bool bAlwaysMarkDirty = true) { return false;
}
	FORCEINLINE bool IsCapturingAsRootObjectForTransaction() const { return false; };
};

---

(translation_unit
  (class_specifier
    name: (type_identifier)
    body: (field_declaration_list
      (function_definition
        (storage_class_specifier
            (unreal_force_inline))
        type: (primitive_type)
        declarator: (function_declarator
          declarator: (field_identifier)
          parameters: (parameter_list
            (optional_parameter_declaration
            
  type: (primitive_type)
              declarator: (identifier)
              default_value: (true))))
        body: (compound_statement
          (return_statement (false))))
      (function_definition
        (storage_class_specifier
            (unreal_force_inline))
       type: (primitive_type)
        declarator: (function_declarator
          declarator: (field_identifier)
    
      parameters: (parameter_list)
          (type_qualifier))
        body: (compound_statement
          (return_statement (false)))))))


===
Pragma Directive Test
===

// Copyright Epic Games, Inc. All Rights Reserved.
#pragma once
#pragma warning(disable: 4996)

---

(translation_unit
  (comment)
  (preproc_call
    directive: (preproc_directive)
    argument: (preproc_arg))
  (preproc_call
    directive: (preproc_directive)
    argument: (preproc_arg)))

===
Constructor with API Specifier Test
===

class AActor : public UObject
{
	ENGINE_API AActor();
	virtual ENGINE_API ~AActor();
};

---

(translation_unit
  (class_specifier
    name: (type_identifier)
    (base_class_clause
      (access_specifier)
      (type_identifier))
    body: (field_declaration_list
      (declaration
        (unreal_api_specifier)
        declarator: (function_declarator
          declarator: (identifier)
          parameters: (parameter_list)))
      (declaration
        (storage_class_specifier
            (unreal_api_specifier))
        declarator: (function_declarator
          declarator: (destructor_name
            (identifier))
          parameters: (parameter_list))))))

===
Deprecated Virtual Function Test
===

class AMyActor
{
	UE_DEPRECATED(5.5, "Use NewFunction instead")
	virtual void OldFunction();
};

---

(translation_unit
  (class_specifier
    name: (type_identifier)
    body: (field_declaration_list
      (field_declaration
        (unreal_deprecated_macro
          (number_literal)
          (string_literal
            (string_content)))
        type: (primitive_type)
        declarator: (function_declarator
          declarator: (field_identifier)
          parameters: (parameter_list))))))


===
Enum with UMETA Test
===

UENUM(BlueprintType)
enum class ESpawnActorScaleMethod : uint8
{
	OverrideRootScale UMETA(DisplayName = "Override Root Component Scale"),
	MultiplyWithRoot UMETA(DisplayName = "Multiply Scale With Root Component Scale"),
	SelectDefaultAtRuntime UMETA(Hidden),
};

---

(translation_unit
  (unreal_enum_declaration
    (uenum_macro
      specifiers: (unreal_specifier_list
        (unreal_specifier (unreal_specifier_keyword))))
    name: (type_identifier)
    base: (type_identifier)
    body: (enumerator_list
      (enumerator
        name: (identifier)
        (umeta_macro
          (unreal_specifier_list
            (unreal_specifier
              key: (unreal_specifier_keyword)
              value: (string_literal
                (string_content))))))
      (enumerator
        name: (identifier)
        (umeta_macro
          (unreal_specifier_list
            (unreal_specifier
              key: (unreal_specifier_keyword)
              value: (string_literal
                (string_content))))))
      (enumerator
        name: (identifier)
        (umeta_macro
          (unreal_specifier_list
            (unreal_specifier
              (identifier))))))))



=====
Meta Specifiers Types Test
===

UCLASS(meta=(DisplayName="MyClass", IsAbstract=true, MyID=10, Tag=Actor))
class AMyClass : public AActor
{
	GENERATED_BODY()

	UPROPERTY(meta=(ClampMin=0, ClampMax="100.0", AllowPrivateAccess=true))
	float Health;

	UENUM(meta=(Bitflags, UseEnumValuesAsMaskValuesInEditor=true))
	enum class EFlags
	{
		None UMETA(Hidden),
		One  UMETA(DisplayName="One"),
	};
};

---

(translation_unit
  (unreal_class_declaration
    (uclass_macro
      specifiers: (unreal_specifier_list
        (unreal_specifier
          key: (unreal_specifier_keyword)
          value: (parenthesized_expression
                (assignment_expression
                  left: (unreal_meta_key)
                  right: (string_literal
                    (string_content)))
                (assignment_expression
                  left: (unreal_meta_key)
                  right: (true))
                (assignment_expression
                  left: (unreal_meta_key)
                  right: (number_literal))
                (assignment_expression
                  left: (unreal_meta_key)
                  right: (identifier))))))
    name: (type_identifier)
    (base_class_clause
      (access_specifier)
      (type_identifier))
    body: (field_declaration_list
      (unreal_body_macro)
      (field_declaration
        (uproperty_macro
          specifiers: (unreal_specifier_list
            (unreal_specifier
              key: (unreal_specifier_keyword)
              value: (parenthesized_expression
                    (assignment_expression
                      left: (unreal_meta_key)
                      right: (number_literal))
                    (assignment_expression
                      left: (unreal_meta_key)
                      right: (string_literal
                        (string_content)))
                    (assignment_expression
                      left: (unreal_meta_key)
                      right: (true))))))
        type: (primitive_type)
        declarator: (field_identifier))
      (unreal_enum_declaration
        (uenum_macro
          specifiers: (unreal_specifier_list
            (unreal_specifier
              key: (unreal_specifier_keyword)
              value: (parenthesized_expression
                    (assignment_expression
                      left: (unreal_meta_key))
                    (assignment_expression
                      left: (unreal_meta_key)
                      right: (true))))))
        name: (type_identifier)
        body: (enumerator_list
          (enumerator
            name: (identifier)
            (umeta_macro
              (unreal_specifier_list
                (unreal_specifier
                (identifier)))))
          (enumerator
            name: (identifier)
            (umeta_macro
              (unreal_specifier_list
                (unreal_specifier
                  key: (unreal_specifier_keyword)
                  value: (string_literal
                (string_content)))))))))))



===
Unreal Pragma Macros in Function Scope
===

void MyFunction()
{
	PRAGMA_DISABLE_DEPRECATION_WARNINGS
	// Some deprecated call
	OldFunction();
	PRAGMA_ENABLE_DEPRECATION_WARNINGS
}

---

(translation_unit
  (function_definition
    type: (primitive_type)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list))
    body: (compound_statement
      (unreal_pragma_macro)
      (comment)
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (argument_list)))
      (unreal_pragma_macro))))
